<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="iak.example.alikhsan778.menupesanan.MainActivity">

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/name"
       android:textColorHint="#68f5bce1"
       android:id="@+id/ed_nama"
       android:textAppearance="?android:textAppearanceMedium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topings"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:textColor="@android:color/black"
        android:textAppearance="?android:textAppearanceSmall"
        android:id="@+id/cb_topingwcrm"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choco"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:textColor="@android:color/black"
        android:textAppearance="?android:textAppearanceSmall"
        android:id="@+id/cb_topingchoco"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:onClick="btnMinusAction"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp"
            android:id="@+id/tv_quantity"
            android:layout_marginRight="8dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:onClick="btnPlusAction"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorGray"
        android:id="@+id/sumary_order"
        android:textAppearance="?android:textAppearanceMedium"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_marginTop="16dp"
        android:onClick="btnSubmitOrder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/detail_order"
        android:layout_marginTop="8dp"
        android:id="@+id/tv_detail_order"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

</LinearLayout>
